<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!--  Supplier info TextView -->
    <TextView
        android:id="@+id/supplier_info"
        style="@style/TextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/supplier_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name of the supplier -->
    <EditText
        android:id="@+id/supplier_name"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/supplier_info"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Phone number related of a supplier -->
    <EditText
        android:id="@+id/supplier_phone"
        style="@style/EditText"
        android:layout_marginEnd="92dp"
        android:ems="8"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/supplier_info"
        app:layout_constraintTop_toBottomOf="@+id/supplier_name" />

    <!-- Book info TextView -->
    <TextView
        android:id="@+id/book_info"
        style="@style/TextView"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/book_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_info"
        tools:text="@string/book_info" />

    <!-- Name of the book -->
    <EditText
        android:id="@+id/book_name"
        style="@style/EditText"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/supplier_info"
        app:layout_constraintTop_toBottomOf="@+id/supplier_phone" />

    <!-- The price of the book -->
    <EditText
        android:id="@+id/book_price"
        style="@style/EditText"
        android:layout_marginEnd="177dp"
        android:ems="4"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/supplier_info"
        app:layout_constraintTop_toBottomOf="@+id/book_name" />

    <!-- The current quantity of a book -->
    <EditText
        android:id="@+id/book_quantity"
        style="@style/EditText"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="8dp"
        android:ems="4"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/supplier_info"
        app:layout_constraintTop_toBottomOf="@+id/book_price"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>